--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       - "8000:8000"
     volumes:
       - .:/app
+      - ssl_certs:/app/ssl
     depends_on:
       - db
     environment:
@@ -27,6 +28,33 @@ services:
     depends_on:
       - web
     environment:
-      - REACT_APP_API_URL=http://web:8000
+      - REACT_APP_API_URL=https://localhost
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ssl_certs:/etc/nginx/ssl
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - web
+    entrypoint: ["sh", "-c", "sleep 10 && exec nginx -g 'daemon off;'"]
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    ports:
+     - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@fixitdesk.hu
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: "False" 
+    depends_on:
+     - db
+    volumes:
+    - ./pgadmin/servers.json:/pgadmin4/servers.json
 volumes:
   postgres_data:
+  ssl_certs:
