--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-Django>=4.2
-djangorestframework
-psycopg2-binary
-gunicorn
-python-decouple
-dj-database-url
-django-cors-headers
-djangorestframework-simplejwt
-django-extensions
-django-sslserver
+asgiref==3.11.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
+dj-database-url==3.1.0
+Django==6.0.2
+django-cors-headers==4.9.0
+django-extensions==4.1
+django-sslserver==0.22
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+gunicorn==25.0.3
+idna==3.11
+packaging==26.0
+psycopg2-binary==2.9.11
+PyJWT==2.11.0
+python-decouple==3.8
+requests==2.32.5
+sqlparse==0.5.5
+tzdata==2025.3
+urllib3==2.6.3
